; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_surface.c_load_surface_from_dds.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_surface.c_load_surface_from_dds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32, i32 }
%struct.dds_header = type { i32 }

@D3DRTYPE_TEXTURE = common dso_local global i64 0, align 8
@D3DXERR_INVALIDDATA = common dso_local global i32 0, align 4
@E_NOTIMPL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i8*, i32*, i32, i32, %struct.TYPE_3__*)* @load_surface_from_dds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_surface_from_dds(i32* %0, i32* %1, i32* %2, i8* %3, i32* %4, i32 %5, i32 %6, %struct.TYPE_3__* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_3__*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca %struct.dds_header*, align 8
  %21 = alloca i32*, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i8* %3, i8** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %17, align 8
  %22 = load i8*, i8** %13, align 8
  %23 = bitcast i8* %22 to %struct.dds_header*
  store %struct.dds_header* %23, %struct.dds_header** %20, align 8
  %24 = load %struct.dds_header*, %struct.dds_header** %20, align 8
  %25 = getelementptr inbounds %struct.dds_header, %struct.dds_header* %24, i64 1
  %26 = bitcast %struct.dds_header* %25 to i32*
  store i32* %26, i32** %21, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @D3DRTYPE_TEXTURE, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %8
  %33 = load i32, i32* @D3DXERR_INVALIDDATA, align 4
  store i32 %33, i32* %9, align 4
  br label %62

34:                                               ; preds = %8
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 3
  %40 = load i32, i32* %39, align 8
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @calculate_dds_surface_size(i32 %37, i32 %40, i32 %43, i32* %19, i32* %18)
  %45 = call i64 @FAILED(i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %34
  %48 = load i32, i32* @E_NOTIMPL, align 4
  store i32 %48, i32* %9, align 4
  br label %62

49:                                               ; preds = %34
  %50 = load i32*, i32** %10, align 8
  %51 = load i32*, i32** %11, align 8
  %52 = load i32*, i32** %12, align 8
  %53 = load i32*, i32** %21, align 8
  %54 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %55 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %54, i32 0, i32 1
  %56 = load i32, i32* %55, align 8
  %57 = load i32, i32* %19, align 4
  %58 = load i32*, i32** %14, align 8
  %59 = load i32, i32* %15, align 4
  %60 = load i32, i32* %16, align 4
  %61 = call i32 @D3DXLoadSurfaceFromMemory(i32* %50, i32* %51, i32* %52, i32* %53, i32 %56, i32 %57, i32* null, i32* %58, i32 %59, i32 %60)
  store i32 %61, i32* %9, align 4
  br label %62

62:                                               ; preds = %49, %47, %32
  %63 = load i32, i32* %9, align 4
  ret i32 %63
}

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @calculate_dds_surface_size(i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @D3DXLoadSurfaceFromMemory(i32*, i32*, i32*, i32*, i32, i32, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
